@@ -15,14 +15,14 @@
  */
 package org.powermock.core;
 
+import org.powermock.reflect.Whitebox;
+import org.powermock.reflect.internal.TypeUtils;
+
 import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
 import java.net.Inet4Address;
 import java.net.InetAddress;
 import java.util.Set;
-
-import org.powermock.reflect.Whitebox;
-import org.powermock.reflect.internal.TypeUtils;
 
 /**
  * Fills the fields with default not-null values. If a field type is an
@@ -40,64 +40,72 @@ import org.powermock.reflect.internal.TypeUtils;
  * </ol>
  */
 public class DefaultFieldValueGenerator {
-	public static <T> T fillWithDefaultValues(T object) {
-		if (object == null) {
-			throw new IllegalArgumentException("object to fill cannot be null");
-		}
-		Set<Field> allInstanceFields = Whitebox.getAllInstanceFields(object);
-		for (Field field : allInstanceFields) {
-			Object defaultValue = TypeUtils.getDefaultValue(field.getType());
-			if (defaultValue == null && field.getType() != object.getClass()) {
-				defaultValue = instantiateFieldType(field);
-				if (defaultValue != null) {
-					fillWithDefaultValues(defaultValue);
-				}
-			}
-			try {
-				field.set(object, defaultValue);
-			} catch (Exception e) {
-				throw new RuntimeException("Internal error: Failed to set field.", e);
-			}
-		}
-		return object;
-	}
 
-	private static Object instantiateFieldType(Field field) {
-		Class<?> fieldType = field.getType();
-		Object defaultValue;
-		int modifiers = fieldType.getModifiers();
-		if (Modifier.isAbstract(modifiers) && !Modifier.isInterface(modifiers) && !fieldType.isArray()) {
-			Class<?> createConcreteSubClass = new ConcreteClassGenerator().createConcreteSubClass(fieldType);
-			defaultValue = createConcreteSubClass == null ? null : Whitebox.newInstance(createConcreteSubClass);
-		} else {
-			fieldType = substituteKnownProblemTypes(fieldType);
-			defaultValue = Whitebox.newInstance(fieldType);
-		}
-		return defaultValue;
-	}
+    public static <T> T fillWithDefaultValues(T object) {
+        if (object == null) {
+            throw new IllegalArgumentException("object to fill cannot be null");
+        }
+        Set<Field> allInstanceFields = Whitebox.getAllInstanceFields(object);
+        for (Field field : allInstanceFields) {
+            final Class<?> fieldType = field.getType();
+            Object defaultValue = TypeUtils.getDefaultValue(fieldType);
+            if (defaultValue == null && fieldType != object.getClass() && !field.isSynthetic()) {
+                defaultValue = instantiateFieldType(field);
+                if (defaultValue != null) {
+                    fillWithDefaultValues(defaultValue);
+                }
+            }
+            try {
+                field.set(object, defaultValue);
+            } catch (Exception e) {
+                throw new RuntimeException("Internal error: Failed to set field.", e);
+            }
+        }
+        return object;
+    }
 
-	/**
-	 * Substitute class types that are known to cause problems when generating
-	 * them.
-	 * 
-	 * @param fieldType
-	 * @return A field-type substitute or the original class.
-	 */
-	private static Class<?> substituteKnownProblemTypes(Class<?> fieldType) {
-		/*
-		 * InetAddress has a private constructor and is normally not
-		 * constructible without reflection. It's no problem instantiating this
-		 * class using reflection or with Whitebox#newInstance but the problem
-		 * lies in the equals method since it _always_ returns false even though
-		 * it's the same instance! So in cases where classes containing an
-		 * InetAddress field and uses it in the equals method (such as
-		 * java.net.URL) then may return false since InetAddress#equals()
-		 * returns false all the time. As a work-around we return an
-		 * Inet4Address instead which has a proper equals method.
-		 */
-		if (fieldType == InetAddress.class) {
-			return Inet4Address.class;
-		}
-		return fieldType;
-	}
+    private static Object instantiateFieldType(Field field) {
+        Class<?> fieldType = field.getType();
+        Object defaultValue;
+        int modifiers = fieldType.getModifiers();
+        if(fieldType.isAssignableFrom(ClassLoader.class) || isClass(fieldType)) {
+            defaultValue = null;
+        } else if (Modifier.isAbstract(modifiers) && !Modifier.isInterface(modifiers) && !fieldType.isArray()) {
+            Class<?> createConcreteSubClass = new ConcreteClassGenerator().createConcreteSubClass(fieldType);
+            defaultValue = createConcreteSubClass == null ? null : Whitebox.newInstance(createConcreteSubClass);
+        } else {
+            fieldType = substituteKnownProblemTypes(fieldType);
+            defaultValue = Whitebox.newInstance(fieldType);
+        }
+        return defaultValue;
+    }
+
+    private static boolean isClass(Class<?> fieldType) {
+        return fieldType == Class.class;
+    }
+
+    /**
+     * Substitute class types that are known to cause problems when generating
+     * them.
+     *
+     * @param fieldType
+     * @return A field-type substitute or the original class.
+     */
+    private static Class<?> substituteKnownProblemTypes(Class<?> fieldType) {
+        /*
+           * InetAddress has a private constructor and is normally not
+           * constructable without reflection. It's no problem instantiating this
+           * class using reflection or with Whitebox#newInstance but the problem
+           * lies in the equals method since it _always_ returns false even though
+           * it's the same instance! So in cases where classes containing an
+           * InetAddress field and uses it in the equals method (such as
+           * java.net.URL) then may return false since InetAddress#equals()
+           * returns false all the time. As a work-around we return an
+           * Inet4Address instead which has a proper equals method.
+           */
+        if (fieldType == InetAddress.class) {
+            return Inet4Address.class;
+        }
+        return fieldType;
+    }
 }
